# RadiantEngine

./: .gitignore  CMakeLists.txt
docs/tdd/: README.md  high_level_design.md
docs/tdd/assets/: gltf_scene_loader.md
docs/tdd/camera/: camera.md
docs/tdd/core/: core_system_coordination.md
docs/tdd/renderer/: culling_system.md  drawdata.md  light_system.md  material_system.md  mesh_system.md  renderer.md  resource_allocator.md  scene_resource_ownership.md
docs/tdd/scene/: scene.md
shaders/: colored_triangle.frag  colored_triangle.vert  colored_triangle_mesh.vert  input_structures.glsl  mesh.frag  mesh.vert  mesh_masked.frag  tex_image.frag
src/: CMakeLists.txt  camera.cpp  camera.h  vk_descriptors.cpp  vk_descriptors.h  vk_engine.cpp  vk_engine.h  vk_images.cpp  vk_images.h  vk_loader.cpp  vk_loader.h  vk_pipelines.cpp  vk_pipelines.h  vk_types.h
